<resources>
    <string name="app_name">RYR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Read Your Results</string>
    <string name="nav_header_subtitle">Understand your test results</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_interpret">Interpret Results</string>
    <string name="menu_saved">My Saved Results</string>
    <string name="menu_settings">Settings</string>

    <!-- Toolbar Titles -->
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="test_select">Select Your Test</string>
    <string name="saved_results">My Saved Results</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>

    <!-- Help Screen -->
    <string name="menu_help">Help</string>
    <string name="help_button_text">Help</string>

    <string name="help_question_1_text">What should I know before using this app?</string>
    <string name="help_answer_1_text">Please read this informational brochure in its entirety before administering the INSTI™ HIV-1 Antibody Test.\n</string>
    <string name="info_brochure_link"><a href='https://www.fda.gov/media/79744/download'>View Informational Brochure</a>\n</string>

    <string name="help_question_2_text">How do I use this app?</string>
    <string name="help_answer_2_text">1. Tap the \"Interpret Results\" button on the Home screen or side navigation drawer.\n\n2. Select the test device that you used.\n\n3. Point your phone\'s camera at the device, fitting the device between the guidelines that appear on screen.\n\n4. Snap a picture and wait for your results to process.\n\n\5. Once your results are ready, you can proceed to view your results.</string>

    <string name="help_question_3_text">How accurate are my results?</string>
    <string name="help_answer_3_text">The INSTI™ HIV-1 Antibody Test is very accurate. However, additional testing is necessary to confirm a preliminary positive result.\n\nFor more detail, you can ask your healthcare provider to give you complete information about the INSTI™ HIV-1 Antibody Test.</string>

    <string name="help_question_4_text">What test devices does this app support?</string>
    <string name="help_answer_4_text">Currently, only the INSTI™ HIV-1 Antibody Test is supported.</string>

    <string name="help_question_5_text">How do I use the INSTI™ HIV-1 Antibody Test?</string>
    <string name="help_answer_5_text"><a href='https://youtu.be/zv-Nbm5Vjl8'>INSTI™ HIV-1 Antibody Test Video Tutorial</a></string>

    <string name="help_question_6_text">Other Frequently Asked Questions</string>
    <string name="help_answer_6_text"><a href='https://insti.com/faq/'>Official INSTI™ FAQ</a></string>

    <!-- Test Selection Screen -->
    <string-array name="test_array">
        <item>INSTI™ HIV Test</item>
    </string-array>
    <string name="insti_select_text">The picture of the test <b>MUST BE TAKEN WITHIN 5 MINUTES</b> of the addition of bottle 3 in order for the results to be accurate.</string>
    <string name="insti_product_insert"><a href="">View INSTI™ HIV Test Product Insert</a></string>

    <!-- Dialogs -->
    <string name="yes">Yes</string>
    <string name="view_my_results_now">View My Results Now</string>
    <string name="save_my_results_for_later">Save My Results for Later</string>
    <string name="no">No</string>
    <string name="saved">Go to "My Saved Results" to see your saved results!</string>
    <string name="dialog_lose_result">Are you sure you want to close your results without saving? You will not be able to view these results again.</string>

    <!-- Counseling Messages -->
    <string name="counseling_positive">A reactive result indicates that you are preliminarily positive for HIV antibodies. This result, however, must be confirmed by another test performed by a care provider. If you have participated in an HIV vaccine study, you should inform your care provider or the person giving you the INSTI™ HIV-1 Antibody Test.</string>
    <string name="counseling_negative">A Non-reactive result means that this test did not detect HIV antibodies in your blood. However, in some cases HIV infection cannot be ruled out completely. If, in the last 3 months, you have had any of the contacts described in "How does someone get infected with HIV?" in the information section, there is a possibility that you may still be infected with HIV. HIV antibodies may not appear until a few months after infection with the virus. A very recent infection may not produce enough antibodies to be detected by this test. If you think your exposure has been less than 3 months, consider testing again at 3 months after your exposure.</string>
    <string name="counseling_invalid">If the test device is dirtied and/or the control © indicator is not clearly visible, please re-take another test and try again.</string>
    <string name="counseling_inconclusive">Please capture another image if the test is still within the valid read period. <b>Do not read the results if more than 5 minutes has elapsed following the addition of bottle 3.</b></string>
    <string name="result_invalid">The app could not identify the test control spot. Common causes of this error include an error in performing the test.</string>
    <string name="result_inconclusive_high_confidence">An inconclusive result is commonly caused by poor image quality factors such as bad lighting, blurriness or the test device is out of frame.</string>
    <string name="result_inconclusive_low_confidence">The confidence levels are not high enough to generate a strong conclusion.</string>

</resources>
